fix gap

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body, html {
     
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* Crea 4 columnas de 1 parte cada una */
-    gap: .5rem; /* Espacio entre columnas */
+    /* gap: .5rem; */
 
     box-sizing: border-box; /* Importante para que el borde no sume tamaño */
 }
@@ -71,7 +71,7 @@ body, html {
     height: 100%;
     /* background: rgba(209, 133, 133, 0.959); */
     overflow: hidden;
-    padding: 1rem;
+    padding: 2px;
 }
 
 .title {
@@ -91,6 +91,9 @@ body, html {
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
 }
 
 .red {
